--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
   <body>
 <h1>Hangman</h1>
 
-<h2>Guesses Left:</h2>
+<h2 class="number-of-guesses">8</h2>
 
 <div class="word-to-guess"></div>
-
-
-<form action="">
-  <label for="letter-input">Letter</label>
-  <input id="letter-box" type="text">
-  <input type="submit" value="Submit">
+<form id="hangman">
+    <input type="text" maxlength="1" minlength="1" name="letter" id="letter" value='' placeholder="Guess a letter" />
+    <input id="guess" name="guess" type="button" value="Guess" />
 </form>
+
+<div id="display-answer"></div>
 
     <script src="js/common-words.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
